--- a/Distortion.ipynb
+++ b/Distortion.ipynb
@@ -35,8 +35,8 @@
     "$$\n",
     "y_\\text{sine}\\left(x\\right)=\n",
     "\\begin{Bmatrix}\n",
-    "   \\operatorname{abs}\\left(x\\right)\\le\\frac{1}{n}: & \\sin\\left(\\frac{x\\pi}{2}n\\right) \\\\\n",
-    "   \\operatorname{abs}\\left(x\\right)\\ge\\frac{1}{n}: & \\operatorname{sgn}\\left(x\\right)\\sin\\left(\\frac{\\pi}{2n}\\right)\n",
+    "   \\operatorname{abs}\\left(x\\right)\\le\\frac{1}{n}: & \\sin\\left(\\frac{x\\pi}{2}n\\right), \\\\\n",
+    "   \\operatorname{abs}\\left(x\\right)\\ge\\frac{1}{n}: & \\operatorname{sgn}\\left(x\\right) \\\\\n",
     "\\end{Bmatrix}\n",
     "$$"
    ]
@@ -208,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
